tests/lean/6013.lean
def test (a : String) : String :=
  let x : String → String := _
  have : x = 10 := by rfl
